// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reveal renders when the transition is not triggered 1`] = `
<div
  style="transition:height 500ms;height:0;overflow:hidden;visibility:hidden"
>
  <div>
    Content to reveal
  </div>
</div>
`;

exports[`Reveal renders when the transition is triggered 1`] = `
<div
  style="transition:height 500ms;height:300px;overflow:hidden"
>
  <div>
    Content to reveal
  </div>
</div>
`;
